# cloud-ml-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_datasets_table.py  0003_create_training_jobs_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  datasets.py  experiments.py  health.py  train.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  dataset.py  training_job.py  user.py
backend/app/schemas/: dataset.py  training_job.py  user.py
backend/app/services/: events.py  mlflow_client.py  storage.py
backend/tests/: conftest.py  test_auth.py  test_datasets.py  test_health.py  test_train.py  test_users.py
deployment-service/: README.md  pyproject.toml
deployment-service/deployer/: main.py
docs/: architecture.md  deployment.md  roadmap.md  tech-choices.md
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  useApi.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.module.css  Layout.tsx  Modal.module.css  Modal.tsx  PageHeader.module.css  PageHeader.tsx  ProtectedRoute.tsx  States.module.css  States.tsx  StatusBadge.module.css  StatusBadge.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: DatasetsPage.module.css  DatasetsPage.tsx  DeploymentsPage.tsx  ExperimentsPage.module.css  ExperimentsPage.tsx  LoginPage.module.css  LoginPage.tsx  ModelsPage.module.css  ModelsPage.tsx  ProfilePage.module.css  ProfilePage.tsx
infra/ansible/: README.md  ansible.cfg  inventory.ini.example  playbook.yml  requirements.yml
infra/ansible/group_vars/: all.yml
infra/ansible/tasks/: hardening.yml  k3s.yml  swap.yml
infra/docker/mlflow/: Dockerfile  requirements.txt
infra/docker/postgres/: init-mlflow-db.sh
infra/kubernetes/: README.md  backend.yaml  frontend.yaml  ingress.yaml  kafka.yaml  kustomization.yaml  minio.yaml  mlflow.yaml  postgres.yaml  redis.yaml  secrets.example.yaml  traefik-config.yaml  training-service.yaml
infra/opentofu/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
training-service/: Dockerfile  README.md  pyproject.toml
training-service/tests/: test_events.py  test_pipeline.py
training-service/trainer/: config.py  consumer.py  db.py  events.py  main.py  models.py  pipeline.py  runner.py
