[project]
name = "deployment-service"
version = "0.1.0"
description = "Cloud ML Platform — deployment worker (Kafka consumer)"
requires-python = ">=3.12"
# Dependencies (kafka client, mlflow, kubernetes) arrive in Sprint 7.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deployer"]

[tool.ruff]
line-length = 100
target-version = "py312"
