[project]
name = "training-service"
version = "0.1.0"
description = "Cloud ML Platform — training worker (Kafka consumer)"
requires-python = ">=3.12"
# Dependencies (kafka client, mlflow, torch, scikit-learn) arrive in Sprint 4.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trainer"]

[tool.ruff]
line-length = 100
target-version = "py312"
