[project]
name = "training-service"
version = "0.1.0"
description = "Cloud ML Platform — training worker"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "mlflow==3.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trainer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["trainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
